Storing Update